<resources>
    <string name="app_name">Quiz</string>
    <string name="btnStartTxt">Start Quiz</string>
    <string name="btnSuggestTxt">Suggest a question</string>
    <string name="btnExitTxt">Exit</string>
    <string name="quizFinishTxt">You have successfully finished the quiz! Congratulations!</string>
    <string name="btnExitToMainMenu">Exit to main menu</string>
    <string name="questionSuggest">Suggest a question!</string>
    <string name="questionSuggestHint">Write a question...</string>
    <string name="btnSendTxt">Send</string>
    <string name="toastQuestionTooSmall">Your question is too small.</string>
    <string name="btnPlayAgain">Play again</string>
    <string name="questionSuggestionExample">Example: What football player has won the Ballon d\'Or in 2018?</string>
    <string name="questionExample">This is a question example?</string>
    <string name="questionCounter">Question: 1/10</string>
    <string name="endScore">Your score is: 7/10</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
</resources>